--- a/baba-g-css.css
+++ b/baba-g-css.css
@@ -961,10 +961,10 @@ li.additional_information_tab {
   }
   #copyright {
       margin-top: 170px;
-  
+  }
 }
 
-@media screen and (max-width: 510px) 
+@media screen and (max-width: 510px) {
   #overlay-content {
       top: 40px;
   }
